fix title z-index

--- a/components/TheHeader.module.css
+++ b/components/TheHeader.module.css
@@ -129,7 +129,7 @@
   width: 100%;
   order: 2;
   padding-top: calc(var(--sp-5) + var(--sp-10));
-  z-index: 1;
+  z-index: 12;
 
   @media (--min-content) {
     width: auto;
